--- a/library-main/build.gradle
+++ b/library-main/build.gradle
@@ -21,6 +21,8 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	implementation("org.projectlombok:lombok:1.18.38")
 	implementation("org.springdoc:springdoc-openapi-starter-webmvc-ui:2.8.9")
+	implementation("org.springframework.boot:spring-boot-starter-data-jpa")
+	implementation("com.h2database:h2:2.3.232")
 	implementation("com.google.code.gson:gson:2.13.1")
 	implementation("com.fasterxml.jackson.core:jackson-databind:2.19.1")
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
